--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,24 +47,24 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
   deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Deploy via SSH to EC2
-        uses: appleboy/ssh-action@v1.0.0
+    - name: Configure AWS Credentials via OIDC
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ubuntu
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            set -e
-            cd /home/ubuntu/devops-assessment
-            git pull origin main
-            export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
-            export DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}
-            chmod +x deploy.sh
-            ./deploy.sh
+          # This uses Secrets to build the Role ARN dynamically
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/nexgen-github-oidc-role
+          aws-region: ap-south-1
+
+      - name: Execute Deployment via AWS SSM
+        run: |
+          aws ssm send-command \
+            --instance-ids "${{ secrets.INSTANCE_ID }}" \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=[
+              "sudo chown -R ubuntu:ubuntu /home/ubuntu/devops-assessment",
+              "cd /home/ubuntu/devops-assessment",
+              "git pull origin main",
+              "export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}",
+              "export DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}",
+              "chmod +x deploy.sh",
+              "./deploy.sh"
+            ]'
