--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,69 +2,58 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
+  workflow_dispatch:
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Setup Docker Buildx (Essential for modern, fast builds)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Login to Docker Hub using your Repository Secrets
-      - name: Login to Docker Hub
+      - name: Docker login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build and Push Backend
-      - name: Build and Push Backend
+      - name: Build and push backend image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: |
-            sohanlal33/devops-backend:v1.0.0
-            sohanlal33/devops-backend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: sohanlal33/devops-backend:v1.0.0
 
-      # Build and Push Frontend
-      - name: Build and Push Frontend
+      - name: Build and push frontend image
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           push: true
-          tags: |
-            sohanlal33/devops-frontend:v1.0.0
-            sohanlal33/devops-frontend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: sohanlal33/devops-frontend:v1.0.0
+
   deploy:
-    - name: Configure AWS Credentials via OIDC
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Configure AWS Credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          # This uses Secrets to build the Role ARN dynamically
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/nexgen-github-oidc-role
           aws-region: ap-south-1
 
-      - name: Execute Deployment via AWS SSM
+      - - name: Run deployment commands on EC2 via AWS SSM
         run: |
           aws ssm send-command \
             --instance-ids "${{ secrets.INSTANCE_ID }}" \
             --document-name "AWS-RunShellScript" \
-            --parameters 'commands=[
-              "sudo chown -R ubuntu:ubuntu /home/ubuntu/devops-assessment",
-              "cd /home/ubuntu/devops-assessment",
-              "git pull origin main",
-              "export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}",
-              "export DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}",
-              "chmod +x deploy.sh",
-              "./deploy.sh"
-            ]'
+            --comment "Final stable deployment" \
+            --region ap-south-1 \
+            --parameters '{"commands":["cd /home/ubuntu/devops-assessment && sudo git fetch origin main && sudo git reset --hard origin/main","export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}","export DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}","sudo -E bash deploy.sh"]}'
