--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,16 +30,16 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: sohanlal33/devops-backend:v1.0.0
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-backend:latest
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           push: true
-          tags: sohanlal33/devops-frontend:v1.0.0
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-frontend:latest
 
-    deploy:
+  deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
@@ -54,9 +54,12 @@ jobs:
           aws ssm send-command \
             --instance-ids "${{ secrets.INSTANCE_ID }}" \
             --document-name "AWS-RunShellScript" \
-            --comment "Final stable deployment" \
             --region ap-south-1 \
-            --parameters '{"commands":["cd /home/ubuntu/devops-assessment && sudo git fetch origin main && sudo git reset --hard origin/main","export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}","export DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}","sudo -E bash deploy.sh"]}'
-
-
-
+            --parameters '{"commands":[
+              "set -e",
+              "cd /home/ubuntu/devops-assessment",
+              "sudo git fetch origin main",
+              "sudo git reset --hard origin/main",
+              "sudo DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }} bash deploy.sh"
+            ]}' \
+            --comment "Final stable deployment"
