--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
+version: "3.9"
+
 services:
   backend:
-    build: ./backend  
-    image: sohanlal33/devops-backend:v1.0.0
+    image: ghcr.io/sohanlal33/devops-backend:v1.0.0
     container_name: django-backend
     restart: always
     env_file:
-      - ./.env
+      - .env
     ports:
       - "8000:8000"
     networks:
       - app_network
 
   frontend:
-    build: ./frontend 
-    image: sohanlal33/devops-frontend:v1.0.0
+    image: ghcr.io/sohanlal33/devops-frontend:v1.0.0
     container_name: react-frontend
     restart: always
     ports:
@@ -26,3 +26,4 @@ services:
 networks:
   app_network:
     driver: bridge
+
