--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,14 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/devops-backend:latest
+          tags: ghcr.io/sohanlal33/devops-backend:latest
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/devops-frontend:latest
+          tags: ghcr.io/sohanlal33/devops-frontend:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -56,4 +56,5 @@ jobs:
             git reset --hard origin/main
             chmod +x deploy.sh
             ./deploy.sh
+
 
