--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ permissions:
   packages: write
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  build-and-push-deploy:
+    runs-on: self-hosted   
 
     steps:
       - name: Checkout repository
@@ -38,23 +38,14 @@ jobs:
           push: true
           tags: ghcr.io/sohanlal33/devops-frontend:latest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-
-    steps:
-      - name: Deploy to EC2 via SSH
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            set -e
-            cd /home/ubuntu/devops-assessment
-            git fetch origin main
-            git reset --hard origin/main
-            chmod +x deploy.sh
-            ./deploy.sh
+      - name: Deploy using docker-compose
+        run: |
+          set -e
+          cd /home/ubuntu/devops-assessment
+          docker-compose pull
+          docker-compose up -d
+          sleep 10
+          curl -f http://localhost || { echo "Frontend health check failed"; exit 1; }
+          curl -f http://localhost:8000/api/hello/ || { echo "Backend health check failed"; exit 1; }
 
 
