--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,11 +11,14 @@ permissions:
 
 jobs:
   build-and-push-deploy:
-    runs-on: self-hosted   
+    runs-on: self-hosted
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry (GHCR)
         uses: docker/login-action@v3
@@ -47,5 +50,4 @@ jobs:
           sleep 10
           curl -f http://localhost || { echo "Frontend health check failed"; exit 1; }
           curl -f http://localhost:8000/api/hello/ || { echo "Backend health check failed"; exit 1; }
-
 
